<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="settings">Настройки</string>
    <string name="library">Медиатека</string>
    <string name="search">Поиск</string>

    <string name="settings_support">Написать в поддержку</string>
    <string name="settings_user_agreement">Пользовательское соглашение</string>
    <string name="settings_share">Поделиться приложением</string>
    <string name="settings_theme">Темная тема</string>
    <string name="share_title">Share APK</string>
    <string name="share_message">https://practicum.yandex.ru/profile/android-developer-plus/</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="support_email">vsizov63@gmail.com</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="track_info_separator">•</string>
    <string name="network_error">Проблемы со связью</string>
    <string name="network_error_hint">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="reload">Обновить</string>
    <string name="not_found_error">Ничего не нашлось</string>
    <string name="search_history_title">Вы искали</string>
    <string name="search_history_clear">Очистить историю</string>
    <string name="player_info_country">Страна</string>
    <string name="player_info_genre">Жанр</string>
    <string name="player_info_year">Год</string>
    <string name="player_info_album">Альбом</string>
    <string name="player_info_time">Длительность</string>
    <string name="library_tab_favourite">Избранные треки</string>
    <string name="library_tab_playlists">Плейлисты</string>
    <string name="library_favourites_empty">Ваша медиатека пуста</string>
    <string name="library_playlists_empty">Вы не создали ни одного плейлиста</string>
    <string name="library_new_playlist">Новый плейлист</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_name_hint">Название*</string>
    <string name="playlist_description_hint">Описание</string>
    <string name="playlist_create_button">Создать</string>
    <plurals name="playlist_track_amount">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
    </plurals>
    <string name="playlist_creation_confirm_dialog_title">Завершить создание плейлиста?</string>
    <string name="playlist_creation_confirm_dialog_message">Все несохранённые данные будут потеряны</string>
    <string name="playlist_creation_confirm_dialog_cancel">Отмена</string>
    <string name="playlist_creation_confirm_dialog_confirm">Завершить</string>
    <string name="add_to_playlist_button">Добавить в плейлист</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="playlist_creation_success">Плейлист успешно создан!</string>
    <string name="add_track_to_playlist_success">Добавлено в плейлист %1$s</string>
    <plurals name="playlist_length">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
    </plurals>
    <string name="playlist_no_tracks_to_share">В данном плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_no_tracks">В данном плейлисте ещё нет треков :(</string>
    <string name="playlist_delete_track_dialog_question">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="playlist_share">Поделиться</string>
    <string name="playlist_edit">Редактировать информацию</string>
    <string name="playlist_delete">Удалить плейлист</string>
    <string name="playlist_delete_playlist_dialog_question">Хотите удалить плейлист «%1$s»?</string>
    <string name="playlist_edit_button">Сохранить</string>
    <string name="playlist_edit_title">Редактировать</string>
</resources>
