<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.ui.SettingsFragment">


    <TextView
        style="@style/ScreenTitle"
        android:text="@string/settings" />

    <LinearLayout
        style="@style/SettingsLine"
        android:orientation="horizontal">

        <TextView
            style="@style/SettingsLineText"
            android:text="@string/settings_theme" />

        <Switch
            android:id="@+id/theme_switcher"
            style="@style/SettingsLineContent"
            android:layout_gravity="end"
            android:paddingHorizontal="0dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/share_button"
        style="@style/SettingsLine"
        android:orientation="horizontal">

        <TextView
            style="@style/SettingsLineText"
            android:text="@string/settings_share" />

        <ImageView
            style="@style/SettingsLineContent"
            android:src="@drawable/ic_share_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/support_button"
        style="@style/SettingsLine"
        android:orientation="horizontal">

        <TextView
            style="@style/SettingsLineText"
            android:text="@string/settings_support" />

        <ImageView
            style="@style/SettingsLineContent"
            android:src="@drawable/ic_support_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/agreement_button"
        style="@style/SettingsLine"
        android:orientation="horizontal">

        <TextView
            style="@style/SettingsLineText"
            android:text="@string/settings_user_agreement" />

        <ImageView
            style="@style/SettingsLineContent"
            android:src="@drawable/ic_arrow_forward_24" />
    </LinearLayout>
</LinearLayout>
