<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <LinearLayout
        style="@style/ScreenTitle"
        android:layout_marginHorizontal="0dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="0dp">

        <ImageView
            android:id="@+id/settings_back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_arrow_back_48" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/padding_small"
            android:paddingTop="@dimen/padding_default"
            android:text="@string/settings"
            android:textFontWeight="500"
            android:textSize="@dimen/font_size"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        style="@style/SettingsLine"
        android:orientation="horizontal">

        <TextView
            style="@style/SettingsLineText"
            android:text="@string/settings_theme" />

        <Switch
            style="@style/SettingsLineContent"
            android:layout_gravity="end"
            android:paddingHorizontal="0dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_share"
        style="@style/SettingsLine"
        android:orientation="horizontal">

        <TextView
            style="@style/SettingsLineText"
            android:text="@string/settings_share" />

        <ImageView
            style="@style/SettingsLineContent"
            android:src="@drawable/ic_share_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_support"
        style="@style/SettingsLine"
        android:orientation="horizontal">

        <TextView
            style="@style/SettingsLineText"
            android:text="@string/settings_support" />

        <ImageView
            style="@style/SettingsLineContent"
            android:src="@drawable/ic_support_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_agreement"
        style="@style/SettingsLine"
        android:orientation="horizontal">

        <TextView
            style="@style/SettingsLineText"
            android:text="@string/settings_user_agreement" />

        <ImageView
            style="@style/SettingsLineContent"
            android:src="@drawable/ic_arrow_forward_24" />
    </LinearLayout>
</LinearLayout>