<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <LinearLayout
        style="@style/ScreenTitle"
        android:layout_marginHorizontal="0dp"
        android:layout_marginBottom="0dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="0dp">

        <ImageView
            android:id="@+id/search_back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_arrow_back_48" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/padding_small"
            android:paddingTop="@dimen/padding_default"
            android:text="@string/search"
            android:textFontWeight="500"
            android:textSize="@dimen/font_size"
            android:textStyle="bold" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:paddingHorizontal="@dimen/padding_default"
        android:paddingVertical="@dimen/padding_small">

        <EditText
            android:id="@+id/search_field"
            style="@style/TextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/ic_search_16"
            android:drawablePadding="@dimen/padding_small"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="start"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            android:singleLine="true"
            android:textFontWeight="400"
            android:textSize="@dimen/font_size_small" />

        <ImageView
            android:id="@+id/search_clear_button"
            android:layout_width="40dp"
            android:layout_height="36dp"
            android:layout_gravity="end"
            android:background="@null"
            android:gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/ic_close_16"
            android:visibility="gone" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/search_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            style="@style/SearchSection.Text"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_section"
            android:paddingBottom="@dimen/padding_small"
            android:text="@string/search_history_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_history_track_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <Button
            android:id="@+id/search_history_clear_button"
            style="@style/SearchActionButton"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_section"
            android:text="@string/search_history_clear" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/track_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:indeterminateTint="@color/blue"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/network_error_block"
        style="@style/SearchErrorBlock">

        <ImageView
            style="@style/SearchSection"
            android:src="@drawable/ic_network_error_120" />

        <TextView
            style="@style/SearchSection.Text"
            android:text="@string/network_error" />

        <TextView
            style="@style/SearchSection.Text"
            android:text="@string/network_error_hint" />

        <Button
            android:id="@+id/reload_button"
            style="@style/SearchActionButton"
            android:text="@string/reload" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/not_found_error_block"
        style="@style/SearchErrorBlock">

        <ImageView
            style="@style/SearchSection"
            android:src="@drawable/ic_not_found_120" />

        <TextView
            style="@style/SearchSection.Text"
            android:text="@string/not_found_error" />
    </LinearLayout>

</LinearLayout>