<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_playlist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".library.ui.CreatePlaylistFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/padding_large" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_border"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/padding_large" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_border_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/padding_default" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_border_description"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/padding_default" />

    <LinearLayout
        android:id="@+id/toolbar"
        style="@style/ScreenTitle"
        android:layout_marginHorizontal="0dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="0dp"
        app:layout_constraintBottom_toTopOf="@id/playlist_cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_arrow_back_48" />

        <TextView
            style="@style/ScreenTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/padding_small"
            android:paddingTop="@dimen/padding_default"
            android:text="@string/new_playlist" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/playlist_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/padding_large"
        android:background="@drawable/dashed_border"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/name"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintStart_toEndOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_add_photo_100" />
    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        style="@style/PlaylistTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_large"
        android:hint="@string/playlist_name_hint"
        app:layout_constraintBottom_toTopOf="@+id/create_button"
        app:layout_constraintEnd_toStartOf="@id/right_border_description"
        app:layout_constraintStart_toEndOf="@id/left_border_description"
        app:layout_constraintTop_toBottomOf="@id/playlist_cover">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description"
        style="@style/PlaylistTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_large"
        android:hint="@string/playlist_description_hint"
        app:layout_constraintBottom_toTopOf="@id/spacer"
        app:layout_constraintEnd_toStartOf="@id/right_border_description"
        app:layout_constraintStart_toEndOf="@id/left_border_description"
        app:layout_constraintTop_toBottomOf="@+id/name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:id="@+id/spacer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/create_button"
        app:layout_constraintHeight_min="@dimen/padding_large"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <Button
        android:id="@+id/create_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/create_playlist_button"
        android:text="@string/playlist_create_button"
        app:cornerRadius="@dimen/padding_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/right_border_description"
        app:layout_constraintStart_toEndOf="@id/left_border_description"
        app:layout_constraintTop_toBottomOf="@id/spacer"
        app:layout_constraintVertical_weight="1" />

</androidx.constraintlayout.widget.ConstraintLayout>
